syntax = "proto3";

option java_package="com.proto.greet";
option java_multiple_files=true;

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}

message GreetManyTimesRequest {
  Greeting greeting = 1;
}

message GreetManyTimesResponse {
  string result = 1;
}
service GreetService {
  //Unary Api
  rpc  Greet(GreetRequest) returns (GreetResponse) {};
  // Server Streaming Api
  rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};
}